fixed margin on audio img on mobile screens

--- a/src/Results.css
+++ b/src/Results.css
@@ -52,7 +52,7 @@ ul {
     font-size: 15px;
     margin-left: 0;
   }
-  img .audio {
+  .audio {
     width: 18px;
     margin-right: 10px;
   }
